@@ -18,7 +18,7 @@ Package=<4>
 
 ###############################################################################
 
-Project: "DllPlugInTester"=.\MSVC6\DllPlugInTester\DllPlugInTester.dsp - Package Owner=<4>
+Project: "DllPlugInTester"=.\DllPlugInTester\DllPlugInTester.dsp - Package Owner=<4>
 
 Package=<5>
 {{{
@@ -28,6 +28,9 @@ Package=<4>
 {{{
     Begin Project Dependency
     Project_Dep_Name cppunit
+    End Project Dependency
+    Begin Project Dependency
+    Project_Dep_Name cppunit_dll
     End Project Dependency
 }}}
 
@@ -45,7 +48,7 @@ Package=<4>
     Project_Dep_Name TestRunner
     End Project Dependency
     Begin Project Dependency
-    Project_Dep_Name cppunit
+    Project_Dep_Name cppunit_dll
     End Project Dependency
 }}}
 
