@@ -1,5 +1,14 @@
 2002-04-21 Baptiste Lepilleur <gaiacrtn@free.fr>
 
+	* contrib/bc5/bcc-makefile.zip: updated, generic makefile for
+	  Borland 5.5, contributed by project cuppa.
+
+	* examples/cppunittest/*Suite.h: integrated Jeffrey Morgan's patch,
+	  to remove warning with gcc.
+
+
+2002-04-21 Baptiste Lepilleur <gaiacrtn@free.fr>
+
 	* src/DllPlugInTester/makefile.am: removed ld.so from LDADD flags.
 
 	* src/DllPlugInTester/CommandLineParser.h:
@@ -39,7 +48,7 @@
 
 	* src/DllPlugInTester/makefile.am:
 	* examples/simple/makefile.am:
-	* examples/cppunittest/makefile.am: integrated Jeffrey Morgan patch,
+	* examples/cppunittest/makefile.am: integrated Jeffrey Morgan's patch,
 	  Unix side should be working again.
 
 	* examples/ReadMe.txt: added. Brief description of each example.
